overflow issue

--- a/rancho/sass/main.sass
+++ b/rancho/sass/main.sass
@@ -30,7 +30,7 @@ body
 		height: 100%
 section
 	padding: 120px 15px
-
+	overflow-x: hidden
 .section-title
 	text-align: center
 	font-family: 'sancreek'
